--- a/public/example.html
+++ b/public/example.html
@@ -13,7 +13,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
     <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
     <script type="text/javascript">
-      var frameSrc = "/buy/transform"; // You'll want to customize this.
+      var frameSrc = "/iframe/transform"; // You'll want to customize this.
       $("#openBtn").click(function() {
         $("#paymentModal").on("show", function() {
           $('iframe').attr('src', frameSrc);
