replace limelight card form with stripe iframe

--- a/public/checkout.html
+++ b/public/checkout.html
@@ -270,7 +270,7 @@
 
                     </div>
                     <div class="formmid">
-                        <!-- <div class="sameas">    
+                        <!-- <div class="sameas">
                               Is your billing address the same as this <br class="txtbreak">shipping address&#63;<br>
                               <span><input id="radioOne" onClick="toggleBillingAddress(this)" type="radio" name="billingSameAsShipping" value="yes" checked="">&nbsp;Yes
                               <input id="radioTwo" onClick="toggleBillingAddress(this)" type="radio" name="billingSameAsShipping" value="no" style="margin-top:10px;">&nbsp;No</span>
@@ -285,7 +285,7 @@
                                  <li><img src="images/card.png" width="220" height="32" alt=""></li>
                              </ul>
                            <div class="clearfix"></div>
-                      <div style="display:none" id="billingDiv">
+                      <!-- <div style="display:none" id="billingDiv">
 
                             <div class="frmElmnts2 clearfix">
                                 <input type="text" placeholder="First Name">
@@ -368,13 +368,13 @@
                             <option value='WY' onclick=''  >Wyoming (WY)</option>
 
                             </select>
-                           </div>
-                            <div class="frmElmnts2 clearfix">
+                           </div> -->
+                            <!-- <div class="frmElmnts2 clearfix">
                             <select>
                                 <option value="" onClick="" selected >Country</option>
-                                <option value='US' onclick=''  >United State</option>
+                                <option value='US' onclick=''  >United States</option>
                             </select>
-                            </div>
+                            </div> -->
                             <div class="frmElmnts2 clearfix">
                                 <input type="text" placeholder="ZIP Code">
                             </div>
@@ -389,7 +389,7 @@
                             </div>
                         </div>
                         <div class="clearall"></div>
-                        <div style="display:block;" id="cardDiv">
+                        <!-- <div style="display:block;" id="cardDiv">
                             <div class="frmElmnts2 clearfix">
                               <select>
                                   <option value="" onClick="" selected >Credit Card Type</option>
@@ -436,7 +436,8 @@
                         </div>
                         <div style="clear:both;"></div>
                         <input type="image" src="images/chk-btn.png" value="" class="submit" />
-                    </div>
+                    </div> -->
+                    <iframe src="/iframe/transform" width="99.6%" height="550" frameborder="0"></iframe>
                     <div class="formbtm"><img src="images/lock.png" alt="" class="lock"></div>
                 </form>
             </div>
