comment out more limelight junk

--- a/public/checkout.html
+++ b/public/checkout.html
@@ -280,11 +280,11 @@
                             <img src="images/hding-arrow.png" alt="" class="hding-arrow2">
                         </div>
                       <div class="clearfix"></div>
-                             <ul class="weaccept">
+                             <!-- <ul class="weaccept">
                                  <li>Credit Card</li>
                                  <li><img src="images/card.png" width="220" height="32" alt=""></li>
                              </ul>
-                           <div class="clearfix"></div>
+                           <div class="clearfix"></div> -->
                       <!-- <div style="display:none" id="billingDiv">
 
                             <div class="frmElmnts2 clearfix">
@@ -368,13 +368,13 @@
                             <option value='WY' onclick=''  >Wyoming (WY)</option>
 
                             </select>
-                           </div> -->
-                            <!-- <div class="frmElmnts2 clearfix">
+                           </div>
+                           <div class="frmElmnts2 clearfix">
                             <select>
                                 <option value="" onClick="" selected >Country</option>
                                 <option value='US' onclick=''  >United States</option>
                             </select>
-                            </div> -->
+                            </div>
                             <div class="frmElmnts2 clearfix">
                                 <input type="text" placeholder="ZIP Code">
                             </div>
@@ -387,8 +387,8 @@
                             <div class="frmElmnts2 clearfix">
                                 <input type="text" placeholder="Shipping">
                             </div>
-                        </div>
-                        <div class="clearall"></div>
+                        </div> -->
+                        <!-- <div class="clearall"></div> -->
                         <!-- <div style="display:block;" id="cardDiv">
                             <div class="frmElmnts2 clearfix">
                               <select>
