--- a/public/checkout.html
+++ b/public/checkout.html
@@ -437,7 +437,7 @@
                         <div style="clear:both;"></div>
                         <input type="image" src="images/chk-btn.png" value="" class="submit" />
                     </div> -->
-                    <iframe src="/iframe/transform" width="99.6%" height="550" frameborder="0"></iframe>
+                    <iframe src="/iframe/transform" width="99.6%" height="470" frameborder="0" seamless></iframe>
                     <div class="formbtm"><img src="images/lock.png" alt="" class="lock"></div>
                 </form>
             </div>
