shonking dat iframe

--- a/public/checkout.html
+++ b/public/checkout.html
@@ -249,24 +249,24 @@
 
                             </select>
                            </div>
-                            <div class="frmElmnts2 clearfix">
+                            <!-- <div class="frmElmnts2 clearfix">
                             <select>
                                 <option value="" onClick="" selected >Country</option>
-                                <option value='US' onclick=''  >United State</option>
+                                <option value='US' onclick=''  >United States</option>
                             </select>
-                            </div>
+                            </div> -->
                             <div class="frmElmnts2 clearfix">
                                 <input type="text" placeholder="ZIP Code">
                             </div>
                             <div class="frmElmnts2 clearfix">
                                 <input type="text" placeholder="Phone">
                             </div>
-                            <div class="frmElmnts2 clearfix">
+                            <!-- <div class="frmElmnts2 clearfix">
                                 <input type="text" placeholder="Email">
-                            </div>
-                            <div class="frmElmnts2 clearfix">
+                            </div> -->
+                            <!-- <div class="frmElmnts2 clearfix">
                                 <input type="text" placeholder="Shipping">
-                            </div>
+                            </div> -->
 
                     </div>
                     <div class="formmid">
@@ -437,7 +437,7 @@
                         <div style="clear:both;"></div>
                         <input type="image" src="images/chk-btn.png" value="" class="submit" />
                     </div> -->
-                    <iframe src="/iframe/transform-x1" width="99.6%" height="456" frameborder="0" seamless></iframe>
+                    <iframe src="/iframe/transform-x1" width="99.6%" height="456" frameborder="0" seamless style='border:0;overflow:hidden;' scrolling='no'></iframe>
                 </form>
             </div>
             </div>
