make package selection work

--- a/public/checkout.html
+++ b/public/checkout.html
@@ -94,7 +94,7 @@
 
                     <div class="clearfix"></div>
                     <div class="link-container-5">
-                        <a href="javascript:void(0);" data-product="product_1" class="picked;">
+                        <a href="javascript:void(0);" data-product="transform-x4" class="picked;">
                      <div id="content-package-5" >
                         <div id="content-package">
                               <div class="hdingbox">
@@ -117,7 +117,7 @@
                     </div>
                     <div class="clearfix"></div>
                     <div class="link-container-3">
-                        <a href="javascript:void(0);" class="package-select" data-product="product_2">
+                        <a href="javascript:void(0);" class="package-select" data-product="transform-x2">
                              <div id="content-package-3" >
                                  <div id="content-package">
                                   <div class="hdingbox">
@@ -138,7 +138,7 @@
                     </div>
                     <div class="clearfix"></div>
                     <div class="link-container-1">
-                        <a href="javascript:void(0);" class="package-select" data-product="product_3">
+                        <a href="javascript:void(0);" class="package-select" data-product="transform-x1">
                             <div id="content-package-2" >
                                  <div id="content-package">
                                     <div class="hdingbox">
@@ -280,164 +280,7 @@
                             <img src="images/hding-arrow.png" alt="" class="hding-arrow2">
                         </div>
                       <div class="clearfix"></div>
-                             <!-- <ul class="weaccept">
-                                 <li>Credit Card</li>
-                                 <li><img src="images/card.png" width="220" height="32" alt=""></li>
-                             </ul>
-                           <div class="clearfix"></div> -->
-                      <!-- <div style="display:none" id="billingDiv">
-
-                            <div class="frmElmnts2 clearfix">
-                                <input type="text" placeholder="First Name">
-                            </div>
-                            <div class="frmElmnts2 clearfix">
-                                <input type="text" placeholder="Last Name">
-                            </div>
-                            <div class="frmElmnts2 clearfix">
-                                <input type="text" placeholder="Street Address">
-                            </div>
-                            <div class="frmElmnts2 clearfix">
-                                <input type="text" placeholder="City">
-                            </div>
-                            <div class="frmElmnts2 clearfix">
-                            <select>
-                            <option value="" onClick="" selected >State/Province</option>
-                            <option value='AL' onclick=''  >Alabama (AL)</option>
-                            <option value='AK' onclick=''  >Alaska (AK)</option>
-                            <option value='AS' onclick=''  >American Samoa (AS)</option>
-                            <option value='AZ' onclick=''  >Arizona (AZ)</option>
-                            <option value='AR' onclick=''  >Arkansas (AR)</option>
-                            <option value='AE-A' onclick=''  >Armed Forces Africa (AE)</option>
-                            <option value='AA' onclick=''  >Armed Forces Americas (AA)</option>
-                            <option value='AE-C' onclick=''  >Armed Forces Canada (AE)</option>
-                            <option value='AE-E' onclick=''  >Armed Forces Europe (AE)</option>
-                            <option value='AE-M' onclick=''  >Armed Forces Middle East (AE)</option>
-                            <option value='AP' onclick=''  >Armed Forces Pacific (AP)</option>
-                            <option value='CA' onclick=''  >California (CA)</option>
-                            <option value='CO' onclick=''  >Colorado (CO)</option>
-                            <option value='CT' onclick=''  >Connecticut (CT)</option>
-                            <option value='DE' onclick=''  >Delaware (DE)</option>
-                            <option value='DC' onclick=''  >District of Columbia (DC)</option>
-                            <option value='FM' onclick=''  >Federated States of Micronesia (FM)</option>
-                            <option value='FL' onclick=''  >Florida (FL)</option>
-                            <option value='GA' onclick=''  >Georgia (GA)</option>
-                            <option value='GU' onclick=''  >Guam (GU)</option>
-                            <option value='HI' onclick=''  >Hawaii (HI)</option>
-                            <option value='ID' onclick=''  >Idaho (ID)</option>
-                            <option value='IL' onclick=''  >Illinois (IL)</option>
-                            <option value='IN' onclick=''  >Indiana (IN)</option>
-                            <option value='IA' onclick=''  >Iowa (IA)</option>
-                            <option value='KS' onclick=''  >Kansas (KS)</option>
-                            <option value='KY' onclick=''  >Kentucky (KY)</option>
-                            <option value='LA' onclick=''  >Louisiana (LA)</option>
-                            <option value='ME' onclick=''  >Maine (ME)</option>
-                            <option value='MD' onclick=''  >Maryland (MD)</option>
-                            <option value='MA' onclick=''  >Massachusetts (MA)</option>
-                            <option value='MI' onclick=''  >Michigan (MI)</option>
-                            <option value='MN' onclick=''  >Minnesota (MN)</option>
-                            <option value='MS' onclick=''  >Mississippi (MS)</option>
-                            <option value='MO' onclick=''  >Missouri (MO)</option>
-                            <option value='MT' onclick=''  >Montana (MT)</option>
-                            <option value='NE' onclick=''  >Nebraska (NE)</option>
-                            <option value='NV' onclick=''  >Nevada (NV)</option>
-                            <option value='NH' onclick=''  >New Hampshire (NH)</option>
-                            <option value='NJ' onclick=''  >New Jersey (NJ)</option>
-                            <option value='NM' onclick=''  >New Mexico (NM)</option>
-                            <option value='NY' onclick=''  >New York (NY)</option>
-                            <option value='NC' onclick=''  >North Carolina (NC)</option>
-                            <option value='ND' onclick=''  >North Dakota (ND)</option>
-                            <option value='MP' onclick=''  >Northern Mariana Islands (MP)</option>
-                            <option value='OH' onclick=''  >Ohio (OH)</option>
-                            <option value='OK' onclick=''  >Oklahoma (OK)</option>
-                            <option value='OR' onclick=''  >Oregon (OR)</option>
-                            <option value='PA' onclick=''  >Pennsylvania (PA)</option>
-                            <option value='PR' onclick=''  >Puerto Rico (PR)</option>
-                            <option value='MH' onclick=''  >Republic of Marshall Islands (MH)</option>
-                            <option value='RI' onclick=''  >Rhode Island (RI)</option>
-                            <option value='SC' onclick=''  >South Carolina (SC)</option>
-                            <option value='SD' onclick=''  >South Dakota (SD)</option>
-                            <option value='TN' onclick=''  >Tennessee (TN)</option>
-                            <option value='TX' onclick=''  >Texas (TX)</option>
-                            <option value='UT' onclick=''  >Utah (UT)</option>
-                            <option value='VT' onclick=''  >Vermont (VT)</option>
-                            <option value='VI' onclick=''  >Virgin Islands of the U.S. (VI)</option>
-                            <option value='VA' onclick=''  >Virginia (VA)</option>
-                            <option value='WA' onclick=''  >Washington (WA)</option>
-                            <option value='WV' onclick=''  >West Virginia (WV)</option>
-                            <option value='WI' onclick=''  >Wisconsin (WI)</option>
-                            <option value='WY' onclick=''  >Wyoming (WY)</option>
-
-                            </select>
-                           </div>
-                           <div class="frmElmnts2 clearfix">
-                            <select>
-                                <option value="" onClick="" selected >Country</option>
-                                <option value='US' onclick=''  >United States</option>
-                            </select>
-                            </div>
-                            <div class="frmElmnts2 clearfix">
-                                <input type="text" placeholder="ZIP Code">
-                            </div>
-                            <div class="frmElmnts2 clearfix">
-                                <input type="text" placeholder="Phone">
-                            </div>
-                            <div class="frmElmnts2 clearfix">
-                                <input type="text" placeholder="Email">
-                            </div>
-                            <div class="frmElmnts2 clearfix">
-                                <input type="text" placeholder="Shipping">
-                            </div>
-                        </div> -->
-                        <!-- <div class="clearall"></div> -->
-                        <!-- <div style="display:block;" id="cardDiv">
-                            <div class="frmElmnts2 clearfix">
-                              <select>
-                                  <option value="" onClick="" selected >Credit Card Type</option>
-                                  <option value="" onClick="">Visa</option>
-                                  <option value="" onClick="">Master Card</option>
-                                  <option value="" onClick="">Discover</option>
-                                  <option value="" onClick="">American Express</option>
-                              </select>
-                            </div>
-                            <div class="frmElmnts2 clearfix">
-                                <select class="short">
-                                <option selected="" value="">Exp Month</option>
-                                <option value="01">(01) January</option>
-                                <option value="02">(02) February</option>
-                                <option value="03">(03) March</option>
-                                <option value="04">(04) April</option>
-                                <option value="05">(05) May</option>
-                                <option value="06">(06) June</option>
-                                <option value="07">(07) July</option>
-                                <option value="08">(08) August</option>
-                                <option value="09">(09) September</option>
-                                <option value="10">(10) October</option>
-                                <option value="11">(11) November</option>
-                                <option value="12">(12) December</option>
-                                </select>
-
-                                <select class="short" style="margin-right:0;">
-                                    <option value="Exp. Year">Exp Year</option>
-                                    <option value="16">2016</option>
-                                    <option value="17">2017</option>
-                                    <option value="18">2018</option>
-                                    <option value="19">2019</option>
-                                    <option value="20">2020</option>
-                                    <option value="21">2021</option>
-                                    <option value="22">2022</option>
-                                    <option value="23">2023</option>
-                                    <option value="24">2024</option>
-                                </select>
-                            </div>
-                            <div class="frmElmnts2 clearfix">
-                                <input type="text" class="short2" placeholder="Security Code">
-                               <a id="open-pop-up-5" href="#pop-up-5" class="what">What's this&#63;</a></a>
-                            </div>
-                        </div>
-                        <div style="clear:both;"></div>
-                        <input type="image" src="images/chk-btn.png" value="" class="submit" />
-                    </div> -->
-                    <iframe src="/iframe/transform-x1" width="99.6%" height="456" frameborder="0" seamless style='border:0;overflow:hidden;' scrolling='no'></iframe>
+                      <iframe src="/iframe/transform-x1" width="99.6%" height="456" frameborder="0" seamless style='border:0;overflow:hidden;' scrolling='no'></iframe>
                 </form>
             </div>
             </div>
@@ -480,6 +323,9 @@ $(document).ready(function(){
         $("#radioTwo").click(function(){
             $("#billingDiv").slideDown("slow");
             });
+    $('.package-select').click(function(){
+      $('iframe').attr('src', '/iframe/' + $(this).data('product'));
+    });
 	});
 
 </script>
