--- a/public/checkout.html
+++ b/public/checkout.html
@@ -94,7 +94,7 @@
 
                     <div class="clearfix"></div>
                     <div class="link-container-5">
-                        <a href="javascript:void(0);" data-product="transform-x4" class="picked;">
+                      <a class='package-select' data-product="transform-x4">
                      <div id="content-package-5" >
                         <div id="content-package">
                               <div class="hdingbox">
@@ -117,7 +117,7 @@
                     </div>
                     <div class="clearfix"></div>
                     <div class="link-container-3">
-                        <a href="javascript:void(0);" class="package-select" data-product="transform-x2">
+                        <a class="package-select" data-product="transform-x2">
                              <div id="content-package-3" >
                                  <div id="content-package">
                                   <div class="hdingbox">
@@ -138,7 +138,7 @@
                     </div>
                     <div class="clearfix"></div>
                     <div class="link-container-1">
-                        <a href="javascript:void(0);" class="package-select" data-product="transform-x1">
+                        <a class="package-select" data-product="transform-x1">
                             <div id="content-package-2" >
                                  <div id="content-package">
                                     <div class="hdingbox">
