--- a/public/checkout.html
+++ b/public/checkout.html
@@ -167,126 +167,37 @@
             <div class="rgtform">
                  <form id="opt_in_form">
                     <div class="formtop">
-                            <div class="frmElmnts2 clearfix" style="margin-top:25px;">
-                                <input type="text" placeholder="First Name">
-                            </div>
-                            <div class="frmElmnts2 clearfix">
-                                <input type="text" placeholder="Last Name">
-                            </div>
-                            <div class="frmElmnts2 clearfix">
-                                <input type="text" placeholder="Street Address">
-                            </div>
-                            <div class="frmElmnts2 clearfix">
-                                <input type="text" placeholder="City">
-                            </div>
-                            <div class="frmElmnts2 clearfix">
-                            <select>
-                            <option value="" onClick="" selected >State/Province</option>
-                            <option value='AL' onclick=''  >Alabama (AL)</option>
-                            <option value='AK' onclick=''  >Alaska (AK)</option>
-                            <option value='AS' onclick=''  >American Samoa (AS)</option>
-                            <option value='AZ' onclick=''  >Arizona (AZ)</option>
-                            <option value='AR' onclick=''  >Arkansas (AR)</option>
-                            <option value='AE-A' onclick=''  >Armed Forces Africa (AE)</option>
-                            <option value='AA' onclick=''  >Armed Forces Americas (AA)</option>
-                            <option value='AE-C' onclick=''  >Armed Forces Canada (AE)</option>
-                            <option value='AE-E' onclick=''  >Armed Forces Europe (AE)</option>
-                            <option value='AE-M' onclick=''  >Armed Forces Middle East (AE)</option>
-                            <option value='AP' onclick=''  >Armed Forces Pacific (AP)</option>
-                            <option value='CA' onclick=''  >California (CA)</option>
-                            <option value='CO' onclick=''  >Colorado (CO)</option>
-                            <option value='CT' onclick=''  >Connecticut (CT)</option>
-                            <option value='DE' onclick=''  >Delaware (DE)</option>
-                            <option value='DC' onclick=''  >District of Columbia (DC)</option>
-                            <option value='FM' onclick=''  >Federated States of Micronesia (FM)</option>
-                            <option value='FL' onclick=''  >Florida (FL)</option>
-                            <option value='GA' onclick=''  >Georgia (GA)</option>
-                            <option value='GU' onclick=''  >Guam (GU)</option>
-                            <option value='HI' onclick=''  >Hawaii (HI)</option>
-                            <option value='ID' onclick=''  >Idaho (ID)</option>
-                            <option value='IL' onclick=''  >Illinois (IL)</option>
-                            <option value='IN' onclick=''  >Indiana (IN)</option>
-                            <option value='IA' onclick=''  >Iowa (IA)</option>
-                            <option value='KS' onclick=''  >Kansas (KS)</option>
-                            <option value='KY' onclick=''  >Kentucky (KY)</option>
-                            <option value='LA' onclick=''  >Louisiana (LA)</option>
-                            <option value='ME' onclick=''  >Maine (ME)</option>
-                            <option value='MD' onclick=''  >Maryland (MD)</option>
-                            <option value='MA' onclick=''  >Massachusetts (MA)</option>
-                            <option value='MI' onclick=''  >Michigan (MI)</option>
-                            <option value='MN' onclick=''  >Minnesota (MN)</option>
-                            <option value='MS' onclick=''  >Mississippi (MS)</option>
-                            <option value='MO' onclick=''  >Missouri (MO)</option>
-                            <option value='MT' onclick=''  >Montana (MT)</option>
-                            <option value='NE' onclick=''  >Nebraska (NE)</option>
-                            <option value='NV' onclick=''  >Nevada (NV)</option>
-                            <option value='NH' onclick=''  >New Hampshire (NH)</option>
-                            <option value='NJ' onclick=''  >New Jersey (NJ)</option>
-                            <option value='NM' onclick=''  >New Mexico (NM)</option>
-                            <option value='NY' onclick=''  >New York (NY)</option>
-                            <option value='NC' onclick=''  >North Carolina (NC)</option>
-                            <option value='ND' onclick=''  >North Dakota (ND)</option>
-                            <option value='MP' onclick=''  >Northern Mariana Islands (MP)</option>
-                            <option value='OH' onclick=''  >Ohio (OH)</option>
-                            <option value='OK' onclick=''  >Oklahoma (OK)</option>
-                            <option value='OR' onclick=''  >Oregon (OR)</option>
-                            <option value='PA' onclick=''  >Pennsylvania (PA)</option>
-                            <option value='PR' onclick=''  >Puerto Rico (PR)</option>
-                            <option value='MH' onclick=''  >Republic of Marshall Islands (MH)</option>
-                            <option value='RI' onclick=''  >Rhode Island (RI)</option>
-                            <option value='SC' onclick=''  >South Carolina (SC)</option>
-                            <option value='SD' onclick=''  >South Dakota (SD)</option>
-                            <option value='TN' onclick=''  >Tennessee (TN)</option>
-                            <option value='TX' onclick=''  >Texas (TX)</option>
-                            <option value='UT' onclick=''  >Utah (UT)</option>
-                            <option value='VT' onclick=''  >Vermont (VT)</option>
-                            <option value='VI' onclick=''  >Virgin Islands of the U.S. (VI)</option>
-                            <option value='VA' onclick=''  >Virginia (VA)</option>
-                            <option value='WA' onclick=''  >Washington (WA)</option>
-                            <option value='WV' onclick=''  >West Virginia (WV)</option>
-                            <option value='WI' onclick=''  >Wisconsin (WI)</option>
-                            <option value='WY' onclick=''  >Wyoming (WY)</option>
-
-                            </select>
-                           </div>
-                            <!-- <div class="frmElmnts2 clearfix">
-                            <select>
-                                <option value="" onClick="" selected >Country</option>
-                                <option value='US' onclick=''  >United States</option>
-                            </select>
-                            </div> -->
-                            <div class="frmElmnts2 clearfix">
-                                <input type="text" placeholder="ZIP Code">
-                            </div>
-                            <div class="frmElmnts2 clearfix">
-                                <input type="text" placeholder="Phone">
-                            </div>
-                            <!-- <div class="frmElmnts2 clearfix">
-                                <input type="text" placeholder="Email">
-                            </div> -->
-                            <!-- <div class="frmElmnts2 clearfix">
-                                <input type="text" placeholder="Shipping">
-                            </div> -->
-
+                      <div class="frmElmnts2 clearfix" style="margin-top:25px;">
+                        <input type="text" placeholder="First Name" name='fname'>
+                      </div>
+                      <div class="frmElmnts2 clearfix">
+                        <input type="text" placeholder="Last Name" name='lname'>
+                      </div>
+                      <div class="frmElmnts2 clearfix">
+                        <input type="text" placeholder="Street Address" name='line1'>
+                      </div>
+                      <div class="frmElmnts2 clearfix">
+                        <input type="text" placeholder="Street Address" name='line1'>
+                      </div>
+                      <div class="frmElmnts2 clearfix">
+                        <input type="text" placeholder="City" name='city'>
+                      </div>
+                      <div class="frmElmnts2 clearfix">
+                        <input type="text" placeholder="State" name='region'>
+                      </div>
+                      <div class="frmElmnts2 clearfix">
+                        <input type="text" placeholder="ZIP Code" name='zip_code'>
+                      </div>
+                      <div class="frmElmnts2 clearfix">
+                        <input type="text" placeholder="Phone" name='phone'>
+                      </div>
                     </div>
-                    <div class="formmid">
-                        <!-- <div class="sameas">
-                              Is your billing address the same as this <br class="txtbreak">shipping address&#63;<br>
-                              <span><input id="radioOne" onClick="toggleBillingAddress(this)" type="radio" name="billingSameAsShipping" value="yes" checked="">&nbsp;Yes
-                              <input id="radioTwo" onClick="toggleBillingAddress(this)" type="radio" name="billingSameAsShipping" value="no" style="margin-top:10px;">&nbsp;No</span>
-                        </div> -->
-                        <div class="frm-hding2">
-                            <p class="hding-txt">Enter Your Payment information</p>
-                            <img src="images/hding-arrow.png" alt="" class="hding-arrow2">
-                        </div>
-                      <div class="clearfix"></div>
-                      <iframe src="/iframe/transform-x1" width="99.6%" height="420" frameborder="0" seamless style='border:0;overflow:hidden;' scrolling='no'></iframe>
-                </form>
-            </div>
-            </div>
-
-
-       </div>
+                  </form>
+                <div class="formmid">
+                  <iframe src="/iframe/transform-x1" width="99.6%" height="420" frameborder="0" seamless style='border:0;overflow:hidden;' scrolling='no'></iframe>
+                </div>
+              </div>
+         </div>
 
     </div>
 </div>
