--- a/public/index.html
+++ b/public/index.html
@@ -303,7 +303,7 @@
    	<div class="contentwrap">
       <img src="images/icon3.png" alt="" class="pbicon">
       <p class="pb2txt1">Principle #3</p>
-      <p class="pb2txt2">SGet Rid of the Self&#45;Sabotaging Word &#34;Diet&#34;</p>
+      <p class="pb2txt2">Get Rid of the Self&#45;Sabotaging Word &#34;Diet&#34;</p>
     </div>
   </div>
   <div class="contentwrap">
