--- a/public/checkout.html
+++ b/public/checkout.html
@@ -36,29 +36,19 @@
 	<div class="row">
     	<div class="col-xs-12 col-sm-7 col-md-7 col-lg-7">
         	<p class="chktxt1">
-                    <img src="images/chk-lftimg.png" alt="" class="lftimg">
-                    <img src="images/chk-lftimg.png" alt="" class="img-mob">As you age&#44; poor diet&#44; lack
-                    of regular exercise&#44; daily stress&#44; and many other factors contribute to gaining
-                    unsightly body fat.
-                    <span>CTU Transform is here to HELP…</span> this unique and special blend of high&#45;quality&#44; research&#45;backed
-                    ingredients supports your fat loss efforts through 5 synergistic pathways&#44; optimizing your results. This NEW&#44;
-                    supercharged fat&#45;incinerating product is scientifically&#45;designed to maximize your fat&#45;burning hormones&#44; boost
-                    metabolism&#44;  crush cravings&#44; and ultimately&#44; HELP you drop that unwanted body fat&#33;<br><br>The regular price for
+            Inventory is limited&#44; only 1&#44;200 bottles of CTU Transform are available at this special offer.  After the
+                    initial 1&#44;200 bottles are gone&#44; the suggested retail price of $99/bottle will resume.  So&#44; grab yours before
+                    the offer runs out&#33;
+            <br><br>
+                   The regular price for
                     a bottle of <span>CTU Transform</span> is
                     <b>$99<img src="images/redcross.png" alt="" class="redcross"></b>.  However&#44; because it’s the first time <span>CTU Transform</span>
                     is available to the public&#44; you will get a FULL month supply for only $69.  That’s a savings of $30 and just .
                     58 cents per pill.  <span> Better yet&#44; to get our Best Deal</span>&#44; when you order 3 Bottles the price lowers
                     to just $59 and bottle... <b>PLUS</b> you get a <b style="color:#ff0000;">4th bottle FREE</b> (That&#39;s more than
                     ½ OFF the regular price).<br><br>
-                    Inventory is limited&#44; only 1&#44;200 bottles of CTU Transform are available at this special offer.  After the
-                    initial 1&#44;200 bottles are gone&#44; the suggested retail price of $99/bottle will resume.  So&#44; grab yours before
-                    the offer runs out&#33;</p>
-                    <p class="chktxt2">TRANSFORM YOUR LIFE NOW&#33; </p>
-                    <img src="images/chk-lftimg2.png" alt="" class="chk-lftimg2">
-                    <p class="chktxt3"><span>CTU Transform</span> is backed by a 1 Year Money Back Guarantee.  While the ingredients in Transform
-                        was created to work and is based on extensive amounts of peer reviewed research&#44; if for any reason at all you
-                        are unsatisfied with your Transform purchase&#44; just let us know and we will issue a prompt and courteous refund…
-                        even on empty bottles.</p>
+                    </p>
+                    
                     <div class="guaranteebox">
                     <div class="guaranteebox-top">
                     <img src="images/chk-guaranteebox-top.png" alt="">
@@ -80,7 +70,7 @@
                         <li>Supports Fat&#45;Burning Hormones</li>
                         <li>Plus many more… </li>
                     </ul>
-            <img src="images/chk-lftimg3.png" width="300" height="230" alt="" class="chk-lftimg3">
+           
     </div>
         </div>
         <div class="col-xs-12 col-sm-5 col-md-5 col-lg-5 chkfrm">
